Fixed up issues with groups, and made the vertical alignment happen for organizations and groups for the images.

--- a/ckanext/marsavin/public/css/mars_avin.css
+++ b/ckanext/marsavin/public/css/mars_avin.css
@@ -609,14 +609,25 @@ h2.module-heading {
 .media-grid .media-item {
   min-height: 300px;
 }
+.media-grid-group .media-item {
+  min-height: 315px;
+}
 
 .media-grid .media-item .media-image-wrapper {
   width: 148px;
   height: 100px;
   line-height: 100px;
+  position: relative;
 }
 .media-grid .media-item .media-image-wrapper .media-image {
-  vertical-align: middle;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  max-width: 95%;
+  max-height: 95%;
 }
 .media-grid .media-item .media-heading {
   min-height: 46px;
